seaqt/QtGui/gen_qtexttable.h

class QTextCharFormat;
class QTextCursor;
typedef QTextFrame::iterator QTextFrame__iterator;
class QTextTable;
class QTextTableCell;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextTable QTextTable;
typedef struct QTextTableCell QTextTableCell;
typedef struct QTextTableFormat QTextTableFormat;
typedef struct QTimerEvent QTimerEvent;
QTextTableCell* QTextTableCell_new();
QTextTableCell* QTextTableCell_new2(QTextTableCell* o);
void QTextTableCell_operatorAssign(QTextTableCell* self, QTextTableCell* o);
void QTextTableCell_setFormat(QTextTableCell* self, QTextCharFormat* format);
QTextCharFormat* QTextTableCell_format(const QTextTableCell* self);
int QTextTableCell_row(const QTextTableCell* self);
int QTextTableCell_column(const QTextTableCell* self);
int QTextTableCell_rowSpan(const QTextTableCell* self);
int QTextTableCell_columnSpan(const QTextTableCell* self);
bool QTextTableCell_isValid(const QTextTableCell* self);
QTextCursor* QTextTableCell_firstCursorPosition(const QTextTableCell* self);
QTextCursor* QTextTableCell_lastCursorPosition(const QTextTableCell* self);
int QTextTableCell_firstPosition(const QTextTableCell* self);
int QTextTableCell_lastPosition(const QTextTableCell* self);
bool QTextTableCell_operatorEqual(const QTextTableCell* self, QTextTableCell* other);
bool QTextTableCell_operatorNotEqual(const QTextTableCell* self, QTextTableCell* other);
QTextFrame__iterator* QTextTableCell_begin(const QTextTableCell* self);
QTextFrame__iterator* QTextTableCell_end(const QTextTableCell* self);
int QTextTableCell_tableCellFormatIndex(const QTextTableCell* self);
void QTextTableCell_delete(QTextTableCell* self);
typedef struct VirtualQTextTable VirtualQTextTable;
typedef struct QTextTable_VTable{
	void (*destructor)(VirtualQTextTable* self);
	QMetaObject* (*metaObject)(const VirtualQTextTable* self);
	void* (*metacast)(VirtualQTextTable* self, const char* param1);
	int (*metacall)(VirtualQTextTable* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQTextTable* self, QEvent* event);
	bool (*eventFilter)(VirtualQTextTable* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQTextTable* self, QTimerEvent* event);
	void (*childEvent)(VirtualQTextTable* self, QChildEvent* event);
	void (*customEvent)(VirtualQTextTable* self, QEvent* event);
	void (*connectNotify)(VirtualQTextTable* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTextTable* self, QMetaMethod* signal);
}QTextTable_VTable;
VirtualQTextTable* QTextTable_new(const QTextTable_VTable* vtbl, size_t vdata, QTextDocument* doc);
QMetaObject* QTextTable_metaObject(const QTextTable* self);
void* QTextTable_metacast(QTextTable* self, const char* param1);
int QTextTable_metacall(QTextTable* self, int param1, int param2, void** param3);
struct seaqt_string QTextTable_tr(const char* s);
struct seaqt_string QTextTable_trUtf8(const char* s);
void QTextTable_resize(QTextTable* self, int rows, int cols);
void QTextTable_insertRows(QTextTable* self, int pos, int num);
void QTextTable_insertColumns(QTextTable* self, int pos, int num);
void QTextTable_appendRows(QTextTable* self, int count);
void QTextTable_appendColumns(QTextTable* self, int count);
void QTextTable_removeRows(QTextTable* self, int pos, int num);
void QTextTable_removeColumns(QTextTable* self, int pos, int num);
void QTextTable_mergeCells(QTextTable* self, int row, int col, int numRows, int numCols);
void QTextTable_mergeCellsWithCursor(QTextTable* self, QTextCursor* cursor);
void QTextTable_splitCell(QTextTable* self, int row, int col, int numRows, int numCols);
int QTextTable_rows(const QTextTable* self);
int QTextTable_columns(const QTextTable* self);
QTextTableCell* QTextTable_cellAt(const QTextTable* self, int row, int col);
QTextTableCell* QTextTable_cellAtWithPosition(const QTextTable* self, int position);
QTextTableCell* QTextTable_cellAtWithQTextCursor(const QTextTable* self, QTextCursor* c);
QTextCursor* QTextTable_rowStart(const QTextTable* self, QTextCursor* c);
QTextCursor* QTextTable_rowEnd(const QTextTable* self, QTextCursor* c);
void QTextTable_setFormat(QTextTable* self, QTextTableFormat* format);
QTextTableFormat* QTextTable_format(const QTextTable* self);
struct seaqt_string QTextTable_tr2(const char* s, const char* c);
struct seaqt_string QTextTable_tr3(const char* s, const char* c, int n);
struct seaqt_string QTextTable_trUtf82(const char* s, const char* c);
struct seaqt_string QTextTable_trUtf83(const char* s, const char* c, int n);
QMetaObject* QTextTable_virtualbase_metaObject(const VirtualQTextTable* self);
void* QTextTable_virtualbase_metacast(VirtualQTextTable* self, const char* param1);
int QTextTable_virtualbase_metacall(VirtualQTextTable* self, int param1, int param2, void** param3);
bool QTextTable_virtualbase_event(VirtualQTextTable* self, QEvent* event);
bool QTextTable_virtualbase_eventFilter(VirtualQTextTable* self, QObject* watched, QEvent* event);
void QTextTable_virtualbase_timerEvent(VirtualQTextTable* self, QTimerEvent* event);
void QTextTable_virtualbase_childEvent(VirtualQTextTable* self, QChildEvent* event);
void QTextTable_virtualbase_customEvent(VirtualQTextTable* self, QEvent* event);
void QTextTable_virtualbase_connectNotify(VirtualQTextTable* self, QMetaMethod* signal);
void QTextTable_virtualbase_disconnectNotify(VirtualQTextTable* self, QMetaMethod* signal);
QObject* QTextTable_protectedbase_sender(const VirtualQTextTable* self);
int QTextTable_protectedbase_senderSignalIndex(const VirtualQTextTable* self);
int QTextTable_protectedbase_receivers(const VirtualQTextTable* self, const char* signal);
bool QTextTable_protectedbase_isSignalConnected(const VirtualQTextTable* self, QMetaMethod* signal);
const QMetaObject* QTextTable_staticMetaObject();
void QTextTable_delete(QTextTable* self);