seaqt/QtGui/gen_qtexttable.nim

import ./Qt5Gui_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt5Gui")  & " -fPIC"
{.compile("gen_qtexttable.cpp", cflags).}


import ./gen_qtexttable_types
export gen_qtexttable_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject_types,
  ../QtCore/gen_qobjectdefs_types,
  ./gen_qtextcursor_types,
  ./gen_qtextdocument_types,
  ./gen_qtextformat_types,
  ./gen_qtextobject
export
  gen_qcoreevent_types,
  gen_qmetaobject_types,
  gen_qobject_types,
  gen_qobjectdefs_types,
  gen_qtextcursor_types,
  gen_qtextdocument_types,
  gen_qtextformat_types,
  gen_qtextobject

type cQTextTableCell*{.exportc: "QTextTableCell", incompleteStruct.} = object
type cQTextTable*{.exportc: "QTextTable", incompleteStruct.} = object

proc fcQTextTableCell_operatorAssign(self: pointer, o: pointer): void {.importc: "QTextTableCell_operatorAssign".}
proc fcQTextTableCell_setFormat(self: pointer, format: pointer): void {.importc: "QTextTableCell_setFormat".}
proc fcQTextTableCell_format(self: pointer, ): pointer {.importc: "QTextTableCell_format".}
proc fcQTextTableCell_row(self: pointer, ): cint {.importc: "QTextTableCell_row".}
proc fcQTextTableCell_column(self: pointer, ): cint {.importc: "QTextTableCell_column".}
proc fcQTextTableCell_rowSpan(self: pointer, ): cint {.importc: "QTextTableCell_rowSpan".}
proc fcQTextTableCell_columnSpan(self: pointer, ): cint {.importc: "QTextTableCell_columnSpan".}
proc fcQTextTableCell_isValid(self: pointer, ): bool {.importc: "QTextTableCell_isValid".}
proc fcQTextTableCell_firstCursorPosition(self: pointer, ): pointer {.importc: "QTextTableCell_firstCursorPosition".}
proc fcQTextTableCell_lastCursorPosition(self: pointer, ): pointer {.importc: "QTextTableCell_lastCursorPosition".}
proc fcQTextTableCell_firstPosition(self: pointer, ): cint {.importc: "QTextTableCell_firstPosition".}
proc fcQTextTableCell_lastPosition(self: pointer, ): cint {.importc: "QTextTableCell_lastPosition".}
proc fcQTextTableCell_operatorEqual(self: pointer, other: pointer): bool {.importc: "QTextTableCell_operatorEqual".}
proc fcQTextTableCell_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QTextTableCell_operatorNotEqual".}
proc fcQTextTableCell_begin(self: pointer, ): pointer {.importc: "QTextTableCell_begin".}
proc fcQTextTableCell_endX(self: pointer, ): pointer {.importc: "QTextTableCell_end".}
proc fcQTextTableCell_tableCellFormatIndex(self: pointer, ): cint {.importc: "QTextTableCell_tableCellFormatIndex".}
proc fcQTextTableCell_new(): ptr cQTextTableCell {.importc: "QTextTableCell_new".}
proc fcQTextTableCell_new2(o: pointer): ptr cQTextTableCell {.importc: "QTextTableCell_new2".}
proc fcQTextTableCell_delete(self: pointer) {.importc: "QTextTableCell_delete".}
proc fcQTextTable_metaObject(self: pointer, ): pointer {.importc: "QTextTable_metaObject".}
proc fcQTextTable_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextTable_metacast".}
proc fcQTextTable_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextTable_metacall".}
proc fcQTextTable_tr(s: cstring): struct_miqt_string {.importc: "QTextTable_tr".}
proc fcQTextTable_trUtf8(s: cstring): struct_miqt_string {.importc: "QTextTable_trUtf8".}
proc fcQTextTable_resize(self: pointer, rows: cint, cols: cint): void {.importc: "QTextTable_resize".}
proc fcQTextTable_insertRows(self: pointer, pos: cint, num: cint): void {.importc: "QTextTable_insertRows".}
proc fcQTextTable_insertColumns(self: pointer, pos: cint, num: cint): void {.importc: "QTextTable_insertColumns".}
proc fcQTextTable_appendRows(self: pointer, count: cint): void {.importc: "QTextTable_appendRows".}
proc fcQTextTable_appendColumns(self: pointer, count: cint): void {.importc: "QTextTable_appendColumns".}
proc fcQTextTable_removeRows(self: pointer, pos: cint, num: cint): void {.importc: "QTextTable_removeRows".}
proc fcQTextTable_removeColumns(self: pointer, pos: cint, num: cint): void {.importc: "QTextTable_removeColumns".}
proc fcQTextTable_mergeCells(self: pointer, row: cint, col: cint, numRows: cint, numCols: cint): void {.importc: "QTextTable_mergeCells".}
proc fcQTextTable_mergeCellsWithCursor(self: pointer, cursor: pointer): void {.importc: "QTextTable_mergeCellsWithCursor".}
proc fcQTextTable_splitCell(self: pointer, row: cint, col: cint, numRows: cint, numCols: cint): void {.importc: "QTextTable_splitCell".}
proc fcQTextTable_rows(self: pointer, ): cint {.importc: "QTextTable_rows".}
proc fcQTextTable_columns(self: pointer, ): cint {.importc: "QTextTable_columns".}
proc fcQTextTable_cellAt(self: pointer, row: cint, col: cint): pointer {.importc: "QTextTable_cellAt".}
proc fcQTextTable_cellAtWithPosition(self: pointer, position: cint): pointer {.importc: "QTextTable_cellAtWithPosition".}
proc fcQTextTable_cellAtWithQTextCursor(self: pointer, c: pointer): pointer {.importc: "QTextTable_cellAtWithQTextCursor".}
proc fcQTextTable_rowStart(self: pointer, c: pointer): pointer {.importc: "QTextTable_rowStart".}
proc fcQTextTable_rowEnd(self: pointer, c: pointer): pointer {.importc: "QTextTable_rowEnd".}
proc fcQTextTable_setFormat(self: pointer, format: pointer): void {.importc: "QTextTable_setFormat".}
proc fcQTextTable_format(self: pointer, ): pointer {.importc: "QTextTable_format".}
proc fcQTextTable_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextTable_tr2".}
proc fcQTextTable_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextTable_tr3".}
proc fcQTextTable_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextTable_trUtf82".}
proc fcQTextTable_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextTable_trUtf83".}
type cQTextTableVTable = object
  destructor*: proc(vtbl: ptr cQTextTableVTable, self: ptr cQTextTable) {.cdecl, raises:[], gcsafe.}
  metaObject*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  metacast*: proc(vtbl, self: pointer, param1: cstring): pointer {.cdecl, raises: [], gcsafe.}
  metacall*: proc(vtbl, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl, raises: [], gcsafe.}
  event*: proc(vtbl, self: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, watched: pointer, event: pointer): bool {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQTextTable_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QTextTable_virtualbase_metaObject".}
proc fcQTextTable_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QTextTable_virtualbase_metacast".}
proc fcQTextTable_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTextTable_virtualbase_metacall".}
proc fcQTextTable_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QTextTable_virtualbase_event".}
proc fcQTextTable_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QTextTable_virtualbase_eventFilter".}
proc fcQTextTable_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QTextTable_virtualbase_timerEvent".}
proc fcQTextTable_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTextTable_virtualbase_childEvent".}
proc fcQTextTable_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTextTable_virtualbase_customEvent".}
proc fcQTextTable_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTextTable_virtualbase_connectNotify".}
proc fcQTextTable_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTextTable_virtualbase_disconnectNotify".}
proc fcQTextTable_protectedbase_sender(self: pointer, ): pointer {.importc: "QTextTable_protectedbase_sender".}
proc fcQTextTable_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QTextTable_protectedbase_senderSignalIndex".}
proc fcQTextTable_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTextTable_protectedbase_receivers".}
proc fcQTextTable_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTextTable_protectedbase_isSignalConnected".}
proc fcQTextTable_new(vtbl: pointer, doc: pointer): ptr cQTextTable {.importc: "QTextTable_new".}
proc fcQTextTable_staticMetaObject(): pointer {.importc: "QTextTable_staticMetaObject".}
proc fcQTextTable_delete(self: pointer) {.importc: "QTextTable_delete".}

proc operatorAssign*(self: gen_qtexttable_types.QTextTableCell, o: gen_qtexttable_types.QTextTableCell): void =
  fcQTextTableCell_operatorAssign(self.h, o.h)

proc setFormat*(self: gen_qtexttable_types.QTextTableCell, format: gen_qtextformat_types.QTextCharFormat): void =
  fcQTextTableCell_setFormat(self.h, format.h)

proc format*(self: gen_qtexttable_types.QTextTableCell, ): gen_qtextformat_types.QTextCharFormat =
  gen_qtextformat_types.QTextCharFormat(h: fcQTextTableCell_format(self.h))

proc row*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_row(self.h)

proc column*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_column(self.h)

proc rowSpan*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_rowSpan(self.h)

proc columnSpan*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_columnSpan(self.h)

proc isValid*(self: gen_qtexttable_types.QTextTableCell, ): bool =
  fcQTextTableCell_isValid(self.h)

proc firstCursorPosition*(self: gen_qtexttable_types.QTextTableCell, ): gen_qtextcursor_types.QTextCursor =
  gen_qtextcursor_types.QTextCursor(h: fcQTextTableCell_firstCursorPosition(self.h))

proc lastCursorPosition*(self: gen_qtexttable_types.QTextTableCell, ): gen_qtextcursor_types.QTextCursor =
  gen_qtextcursor_types.QTextCursor(h: fcQTextTableCell_lastCursorPosition(self.h))

proc firstPosition*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_firstPosition(self.h)

proc lastPosition*(self: gen_qtexttable_types.QTextTableCell, ): cint =
  fcQTextTableCell_lastPosition(self.h)

proc operatorEqual*(self: gen_qtexttable_types.QTextTableCell, other: gen_qtexttable_types.QTextTableCell): bool =
  fcQTextTableCell_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: gen_qtexttable_types.QTextTableCell, other: gen_qtexttable_types.QTextTableCell): bool =
  fcQTextTableCell_operatorNotEqual(self.h, other.h)

proc begin*(self: gen_qtexttable_types.QTextTableCell, ): gen_qtextobject_types.QTextFrameiterator =
  gen_qtextobject_types.QTextFrameiterator(h: fcQTextTableCell_begin(self.h))

proc endX*(self: gen_qtexttable_types.QTextTableCell, ): gen_qtextobject_types.QTextFrameiterator =
  gen_qtextobject_types.QTextFrameiterator(h: fcQTextTableCell_endX(self.h))
